@@ -3,6 +3,7 @@ Version 1.3.2
   - [regression, bisected] Icon information is not displayed correctly [BUG-80];
   - Winetricks does not update [BUG-77];
   - First startup wizard (quick mount profile): profile strings are initially empty if fuseiso is not installed [BUG-81];
+  - Download (latest) Winetricks from GitHub [BUG-82];
 
 Version 1.3.1
  Added:
